force-app/main/default/objects/Waitlist_Attributes__c/Waitlist_Attributes__c.object-meta.xml
<CustomObject>
    <description>This object is used store all Amenities, Preference&apos;s, Vouchers information of Waitlist.</description>
    <label>Listing Attributes</label>
    <nameField>
        <displayFormat>WLAtt{000000}</displayFormat>
        <label>Waitlist Attributes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>