force-app/main/default/objects/Waitlist_Attributes__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HCR_Amenities_Options</valueSetName>
    </valueSet>
</CustomField>