force-app/main/default/objects/Waitlist_Attributes__c/fields/AMI_Category__c.field-meta.xml
<CustomField>
    <fullName>AMI_Category__c</fullName>
    <label>AMI Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>110%</fullName>
            </value>
            <value>
                <fullName>120%</fullName>
            </value>
            <value>
                <fullName>130%</fullName>
            </value>
            <value>
                <fullName>85%</fullName>
                <isActive>false</isActive>
                <label>85%</label>
            </value>
            <value>
                <fullName>95%</fullName>
                <isActive>false</isActive>
                <label>95%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>