force-app/main/default/objects/Waitlist_Attributes__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of Preference as defined as either a Set Aside or Preference of Special Populations</description>
    <inlineHelpText>Category of Preference as defined as either a Set Aside or Preference of Special Populations</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set Aside</fullName>
            </value>
            <value>
                <fullName>Preferences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>