force-app/main/default/objects/Waitlist_Attributes__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Count of Units or Limits on each enumeration value</description>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>