force-app/main/default/objects/Waitlist_Attributes__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>This is the key of any potential key/value pairs based on the attribute that is defined by the record type.  This object is intended to be a M-D enumeration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>