force-app/main/default/objects/Waitlist_Attributes__c/fields/Min_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Min_Household_Income__c</fullName>
    <label>Min Household Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>