force-app/main/default/objects/Waitlist_Attributes__c/fields/Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent__c</fullName>
    <label>Monthly Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>