force-app/main/default/objects/Waitlist_Attributes__c/fields/Record_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Field__c</fullName>
    <formula>IF(RecordType.Name = &quot;Amenities&quot;, &quot;Amenities__c&quot;, IF(RecordType.Name = &quot;Preferences&quot;, &quot;Preference_Types__c&quot;, IF(RecordType.Name = &quot;AMI_Limits&quot;, &quot;AMI_Category__c&quot;, IF(RecordType.Name = &quot;Vouchers&quot;, &quot;Voucher_Types__c&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Field</label>
    <type>Text</type>
</CustomField>