force-app/main/default/objects/Waitlist_Attributes__c/fields/System_UI_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>System_UI_Icon_URL__c</fullName>
    <description>For Experience Cloud UI, icon url for display of any attribute</description>
    <encryptionScheme>None</encryptionScheme>
    <label>System UI Icon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>