force-app/main/default/objects/Waitlist_Attributes__c/fields/Units_with_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Units_with_Attribute__c</fullName>
    <label>Units with Attribute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>