force-app/main/default/objects/Waitlist_Attributes__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>This is the value of the attribute that is defined by the record type.  This object is intended to be a M-D enumeration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>