force-app/main/default/objects/Waitlist_Attributes__c/fields/Voucher_Types__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Types__c</fullName>
    <label>Voucher Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PBCA</fullName>
            </value>
            <value>
                <fullName>PBRA</fullName>
            </value>
            <value>
                <fullName>Project Based Vouchers</fullName>
            </value>
            <value>
                <fullName>RAD</fullName>
            </value>
            <value>
                <fullName>Tenant Based Section 8</fullName>
            </value>
            <value>
                <fullName>USDA RRAP</fullName>
            </value>
            <value>
                <fullName>Project Based Section 8 Rental Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>