force-app/main/default/objects/Waitlist_Attributes__c/fields/Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Waitlist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waitlist</label>
    <referenceTo>Waitlist__c</referenceTo>
    <relationshipName>Waitlist_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>