force-app/main/default/objects/Waitlist_Attributes__c/recordTypes/Amenities.recordType-meta.xml
<RecordType>
    <fullName>Amenities</fullName>
    <active>true</active>
    <label>Amenities</label>
</RecordType>